--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <a href="https://www.unilever.com.bd/Images/supply-chain_tcm1314-528859_1_en.pdf"> </a>
 </nav>
 <div>
-<img src="C:\Users\auria\Desktop\uvlamp.jpg">
+<img src="uvlamp.jpg">
 </div>
 
 <footer>
