--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <nav>
-<a href="http://www.inceptapharma.com/production-facilities.php"> </a>
-<a href="https://www.unilever.com.bd/Images/supply-chain_tcm1314-528859_1_en.pdf"> </a>
+<a href="http://www.inceptapharma.com/production-facilities.php">incepta </a>
+<a href="https://www.unilever.com.bd/Images/supply-chain_tcm1314-528859_1_en.pdf"> unilever.com</a>
 </nav>
 <div>
 <img src="uvlamp.jpg">
